RESOLVED FIXED135398
fast/borders/border-radius-on-subpixel-position-non-hidpi.html fails on Retina machines
https://bugs.webkit.org/show_bug.cgi?id=135398
Summary fast/borders/border-radius-on-subpixel-position-non-hidpi.html fails on Retin...
Alexey Proskuryakov
Reported 2014-07-29 15:34:34 PDT
Because it has an expected file with "hidpi-" in it! We are supposed to only switch to hidpi mode when test name starts with "hidpi-".
Attachments
proposed fix (3.95 KB, patch)
2014-07-29 15:39 PDT, Alexey Proskuryakov
zalan: review+
Alexey Proskuryakov
Comment 1 2014-07-29 15:39:25 PDT
Created attachment 235703 [details] proposed fix
Alexey Proskuryakov
Comment 2 2014-07-29 15:41:49 PDT
Note You need to log in before you can comment on or make changes to this bug.