fast/borders/border-radius-on-subpixel-position-non-hidpi.html fails on Retina machines https://bugs.webkit.org/show_bug.cgi?id=135398

Reviewed by Zalan Bujtas.


Tools:
* WebKitTestRunner/TestController.cpp: (WTR::TestController::updateWindowScaleForTest):
"hidpi-" should be at the start. This allows "hidpi-" in both file and directory names.

* DumpRenderTree/mac/DumpRenderTree.mm: (changeWindowScaleIfNeeded): Same fix.
For some reason, I wasn't seeing this test fail on WK1 even without the fix, not
sure why.

LayoutTests:
* platform/mac-wk2/TestExpectations: Let's try to unskip the test, maybe this was
the actual reason for it to appear failing?



Canonical link: https://commits.webkit.org/153283@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@171772 268f45cc-cd09-0410-ab3c-d52691b4dbfc